debugging background colour issues on mobile

--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -2,9 +2,6 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
-/* * {
-  color: black !important;
-} */
 
 
 :root {
@@ -12,8 +9,8 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  background-color: #242424;
+  /* color-scheme: light dark;
+  background-color: #242424; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
